force-app/main/default/objects/Year__c/fields/Bowl_Games_Imported__c.field-meta.xml
<CustomField>
    <fullName>Bowl_Games_Imported__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will get checked once the Bowl Games for a particular year have been imported. If checked, the &apos;Import Bowl Games&apos; button will be rendered disabled.</description>
    <inlineHelpText>This field will get checked once the Bowl Games for a particular year have been imported. If checked, the &apos;Import Bowl Games&apos; button will be rendered disabled.</inlineHelpText>
    <label>Bowl Games Imported</label>
    <type>Checkbox</type>
</CustomField>