force-app/main/default/objects/Year__c/fields/First_Place__c.field-meta.xml
<CustomField>
    <fullName>First_Place__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First Place</label>
    <referenceTo>Participant__c</referenceTo>
    <relationshipLabel>Years They Won</relationshipLabel>
    <relationshipName>Years_They_Won</relationshipName>
    <type>Lookup</type>
</CustomField>