force-app/main/default/objects/Year__c/fields/Last_Place_DFL__c.field-meta.xml
<CustomField>
    <fullName>Last_Place_DFL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Place (DFL)</label>
    <referenceTo>Participant__c</referenceTo>
    <relationshipLabel>Years They Got Last Place (DFL)</relationshipLabel>
    <relationshipName>Years_They_Got_Last_Place_DFL</relationshipName>
    <type>Lookup</type>
</CustomField>