force-app/main/default/objects/Year__c/fields/Number_Of_Bowl_Games__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Bowl_Games__c</fullName>
    <label>Number Of Bowl Games</label>
    <summaryForeignKey>Bowl_Game__c.Year__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>