force-app/main/default/objects/Year__c/fields/Number_Of_Participants__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Participants__c</fullName>
    <description>Number of people participating this year.</description>
    <inlineHelpText>Number of people participating this year.</inlineHelpText>
    <label>Number Of Participants</label>
    <summaryForeignKey>Year_Participated__c.Year__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>