force-app/main/default/objects/Year__c/fields/Second_Place__c.field-meta.xml
<CustomField>
    <fullName>Second_Place__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Second Place</label>
    <referenceTo>Participant__c</referenceTo>
    <relationshipLabel>Years They Got Second Place</relationshipLabel>
    <relationshipName>Years_They_Got_Second_Place</relationshipName>
    <type>Lookup</type>
</CustomField>